--- a/docs/siradoc.yml
+++ b/docs/siradoc.yml
@@ -1,15 +1,15 @@
 # Manual
-manual_name: 'JCSUE'
+manual_name: 'CCosQuick'
 
 # Theme
-header_color: '#2A2A2A'
+header_color: '#4D9EBD'
 arrow_color: '#19E3B1'
 th_show: true
 th_color: '#A2F2DE'
 
 # Version
-version_title_01: 'JCSUE Version: '
-version_title_02: 'Unreal Version: '
+version_title_01: 'CCosQuick Version: '
+version_title_02: 'Coscos Creator: '
 version_title_03: ''
 version_title_04: ''
 version_title_05: ''
@@ -17,7 +17,7 @@ version_title_06: ''
 version_title_07: ''
 
 version_num_01: '0.0.1'
-version_num_02: '4.25.1'
+version_num_02: '2.1.3'
 version_num_03: ''
 version_num_04: ''
 version_num_05: ''
@@ -25,8 +25,8 @@ version_num_06: ''
 version_num_07: ''
 
 # Copyright
-copyright_text: 'Copyright © 2018 JCSUE Group. Built: 2018-10-26.'
+copyright_text: 'Copyright © 2020 CCosQuick Group. Built: 2020-01-12.'
 
 # Link
-homepage_url: 'https://github.com/jcs090218/JCSUE'
-homepage_text: 'JCSUE.github'
+homepage_url: 'https://github.com/jcs090218/CCosQuick'
+homepage_text: 'CCosQuick.github'
